Added Nelmio package, config and simple OpenAPI specification to ConfigController.php
